Implement search usergroup in search rest and use it
